--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -60,8 +60,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Defining path to the EDF file. Filename format should be: patientacronym*-baseline.EDF or patientacronym*-seizure.EDF (asterix signifies a regular expression for any string of choice).\n",
-    "###### Subject identifier is saved as a three-letter acronym. "
+    "##### Defining path to the EDF file. Filename format should be: patientacronym*-baseline.EDF or patientacronym*-seizure.EDF (asterix signifies a regular expression for any string of choice).\n",
+    "##### Subject identifier is saved as a three-letter acronym. "
    ]
   },
   {
@@ -73,7 +73,8 @@
     "file_baseline = main_folder + \"data/ASJ2016APR14-PAc-baseline.EDF\"\n",
     "file_seizure = main_folder + \"data/ASJ2016APR14-PAc-seizure.EDF\"\n",
     "\n",
-    "subject_id = file_seizure[0:3]"
+    "subject_id = file_seizure.split(\"/\")[-1][0:3]\n",
+    "print(\"Subject ID:\", subject_id)"
    ]
   },
   {
@@ -81,9 +82,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Connectivity will be measured in epochs of data and later classified between baseline and a window of interest (WOI).\n",
-    "###### The WOI is fragmented into epochs of 1 second (span), with half-second overlaps (step). \n",
-    "###### To keep the dataset balanced, we considered a fixed number of epochs, irregardless of the WOI duration. This number was fixed to 119 epochs (60/0.5-1), which covers a 1-minute window using the pre-set span and step parameters. "
+    "##### Connectivity will be measured in epochs of data and later classified between baseline and a window of interest (WOI).\n",
+    "##### The WOI is fragmented into epochs of 1 second (span), with half-second overlaps (step). \n",
+    "##### To keep the dataset balanced, we considered a fixed number of epochs, irregardless of the WOI duration. This number was fixed to 119 epochs (60/0.5-1), which covers a 1-minute window using the pre-set span and step parameters. "
    ]
   },
   {
@@ -94,7 +95,9 @@
    "source": [
     "span, step = 1000, 500      # in ms\n",
     "min_woi_duration = 60000    # in ms\n",
-    "n_epochs = (min_woi_duration/step)-1\n",
+    "n_epochs = int((min_woi_duration/step)-1)\n",
+    "\n",
+    "print(\"Number of epochs to consider for classification =\", n_epochs)\n",
     "\n",
     "eeg_seizure = EEG.from_file(file_seizure, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class) \n",
     "eeg_baseline = EEG.from_file(file_baseline, epoch(ms(step), ms(span)))   # load raw baseline SEEG data as an EEG object (class) "
@@ -105,7 +108,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### The raw signal will be resampled to 500 Hz."
+    "##### Consult the clinical annotations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Seizure file annotations:\\n\\n\", [note for note in eeg_seizure.notes])\n",
+    "print(\"\\nBaseline file annotations:\\n\\n\", [note for note in eeg_baseline.notes])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Check file duration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Seizure file duration:\", eeg_seizure.duration)\n",
+    "print(\"Baseline file duration:\", eeg_baseline.duration)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Check nodes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_seizure = list(eeg_seizure.axes.region)\n",
+    "nodes_baseline = list(eeg_baseline.axes.region)\n",
+    "\n",
+    "nodes=[]\n",
+    "if nodes_seizure==nodes_baseline: nodes = nodes_seizure\n",
+    "else:\n",
+    "    missing_nodes=[]\n",
+    "    if len(nodes_seizure)>len(nodes_baseline): \n",
+    "        missing_nodes, nodes = [node for node in nodes_seizure if node not in nodes_baseline], nodes_seizure\n",
+    "        for missing in missing_nodes: \n",
+    "            print(f\"Node {missing} removed from seizure file as not present in baseline file.\")\n",
+    "            del nodes[nodes.index(missing)]\n",
+    "            eeg_seizure.axes.region.remove(missing)\n",
+    "    \n",
+    "    elif len(nodes_seizure)<len(nodes_baseline): \n",
+    "        missing_nodes, nodes = [node for node in nodes_baseline if node not in nodes_seizure], nodes_baseline\n",
+    "        for missing in missing_nodes: \n",
+    "            for missing in missing_nodes: \n",
+    "                print(f\"Node {missing} removed from baseline file as not present in seizure file.\")\n",
+    "                del nodes[nodes.index(missing)]\n",
+    "                eeg_baseline.axes.region.remove(missing)\n",
+    "\n",
+    "print(\"\\nFiles now have the same nodes:\", nodes_seizure==nodes_baseline)\n",
+    "print(\"Number of nodes =\", len(nodes))\n",
+    "print(nodes)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The raw signal will be resampled to 500 Hz."
    ]
   },
   {
@@ -115,6 +195,13 @@
    "outputs": [],
    "source": [
     "# check sampling\n",
+    "\n",
+    "if eeg_baseline.fs == 50 and eeg_seizure.fs == 50: \n",
+    "    \n",
+    "    print(\"WARNING: The sampling frequency may have been incorrectly filed... Overwrite with data from subsmeta.xlsx table for now; check with Ale later\")\n",
+    "    eeg_seizure._set(fs = 500)\n",
+    "    eeg_baseline._set(fs = 500)\n",
+    "\n",
     "print(\"Sampling freqency (seizure file) =\", eeg_seizure.fs)\n",
     "print(\"Sampling freqency (baseline file) =\", eeg_baseline.fs)\n",
     "\n",
@@ -129,7 +216,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Label the non-seizure (baseline) and seizure epochs relative to the position of clinical annotations (seizure start, seizure end). WOI is always defined relative to the seizure start. The baseline data is labeled independently."
+    "##### Label the non-seizure (baseline) and seizure epochs relative to the position of clinical annotations (seizure start, seizure end). WOI is always defined relative to the seizure start. The baseline data is labeled independently.\n",
+    "##### Baseline file has arbitrary annotations, \"EEG inicio\" in the middle point and \"EEG fin\" at the end. The annotations serve to split the recording into two halves, for computing the baseline connectivity change (change from the first half to the second half)"
    ]
   },
   {
@@ -142,7 +230,9 @@
     "SET(eeg_seizure, 'EEG inicio', 'W')            # W - WOI\n",
     "SET(eeg_seizure, 'EEG fin', 'S', epoch.END)    # S - seizure\n",
     "\n",
-    "SET(eeg_baseline, _as='N')"
+    "SET(eeg_baseline, _as='N')\n",
+    "SET(eeg_baseline, 'mitad-NS', 'W')            # W - middle point\n",
+    "SET(eeg_baseline, 'NS-fin', 'S', epoch.END)    # S - terminal point (end of recording)"
    ]
   },
   {
@@ -150,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Optimize the positions of epochs relative to the clinical annotations."
+    "##### Optimize the positions of epochs relative to the clinical annotations."
    ]
   },
   {
@@ -160,7 +250,10 @@
    "outputs": [],
    "source": [
     "eeg_seizure.optimize()\n",
-    "eeg_seizure.remap()"
+    "eeg_seizure.remap()\n",
+    "\n",
+    "eeg_baseline.optimize()\n",
+    "eeg_baseline.remap()"
    ]
   },
   {
@@ -168,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Save seizure duration as the number of epochs present between the clinical annotations of seizure start and end."
+    "##### Save seizure duration as the number of epochs present between the clinical annotations of seizure start and end."
    ]
   },
   {
@@ -186,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Introduce a virtual mask into the eeg object, which indicates the time window to which an epoch belongs to (baseline, WOI or seizure). WOI is defined relative to the seizure start."
+    "##### Introduce a virtual mask into the eeg object, which indicates the time window to which an epoch belongs to (baseline, WOI or seizure). WOI is defined relative to the seizure start."
    ]
   },
   {
@@ -195,7 +288,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if woi in [str(n) for n in [2,3,4,5,6]]:\n",
+    "if woi == \"1\":\n",
+    "    woi_start = -units\n",
+    "    woi_end = 0\n",
+    "\n",
+    "elif woi in [str(n) for n in [2,3,4,5,6]]:\n",
     "    woi_start = - int(woi_code[woi][-1])*n_epochs\n",
     "    woi_end = - (int(woi_code[woi][-1])-1)*n_epochs\n",
     "\n",
@@ -207,12 +304,13 @@
     "    woi_start = - int(round(units*.3))\n",
     "    woi_end = - woi_start\n",
     "\n",
-    "eeg_seizure.tag(('W', 'S'), W=range(woi_start,woi_end,1), S=range(0,-units,-1))\n",
+    "elif woi == \"10\":\n",
+    "    woi_start = -1\n",
+    "    woi_end = 0\n",
     "\n",
-    "# elif woi == \"10\":\n",
-    "#     eeg_seizure.tag(('S')) \n",
+    "eeg_seizure.tag(('W', 'S'), W=range(int(woi_start),int(woi_end),1), S=range(0,-units,-1))\n",
     "\n",
-    "# eeg_baseline.tag(('N')) # TODO: is this necessary?"
+    "eeg_baseline.tag(('W', 'S'), W=range(int(woi_start),int(woi_end),1), S=range(0,-units,-1))"
    ]
   },
   {
@@ -220,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Fetch the WOI epochs."
+    "##### Fetch the WOI epochs."
    ]
   },
   {
@@ -230,10 +328,26 @@
    "outputs": [],
    "source": [
     "a, ai = eeg_seizure.sample.get('W', n_epochs)   \n",
-    "b, bi = eeg_baseline.sample.get('N', n_epochs)   \n",
+    "b, bi = eeg_baseline.sample.get('W', n_epochs)   \n",
     "i = ai + bi                         \n",
     "x = a + b                         \n",
-    "y = [0]*n_epochs + [1]*n_epochs   "
+    "y = [0]*n_epochs + [1]*n_epochs\n",
+    "\n",
+    "print(\"Total number of epochs (seizure + baseline) =\", len(x))\n",
+    "print(\"Epoch shape =\", a[0].shape)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from random import randint\n",
+    "\n",
+    "j = randint(0, n_epochs)\n",
+    "plt.figure(figsize=(3,3))\n",
+    "plt.plot(a[0][j])\n",
+    "plt.title(\"Epoch example (seizure file)\")\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(3,3))\n",
+    "plt.plot(b[0][j-1])\n",
+    "plt.title(\"Epoch example (baseline file)\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -241,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Resample data."
+    "##### Resample data."
    ]
   },
   {
@@ -262,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Filter in the set frequency band, if needed."
+    "##### Filter in the set frequency band, if needed."
    ]
   },
   {
@@ -283,14 +397,13 @@
    "source": [
     "cm = struct(x=np.array(x), y=np.array(y), i=np.array(i)) # initiating an object for storing a connecivity matrix with shape (x, y) and epoch indices\n",
     "\n",
-    "nodes = list(eeg_seizure.axes.region)\n",
     "cm._set(nodes = nodes)\n",
     "\n",
     "if method_code[method_idx] == \"SC_\":\n",
     "    cm._set(X = connectivity_analysis(fpp_seizure, spectral_coherence, fs=fpp_seizure[0].shape[1], imag=imag))\n",
     "\n",
     "elif method_code[method_idx] == \"PEC\": \n",
-    "    cm._set(X = [PEC(ep,i+1) for i,ep in enumerate(fpp_seizure)])\n",
+    "    cm._set(X = [PEC(ep,i+1) for i,ep in enumerate(fpp_seizure)]) \n",
     "\n",
     "elif method_code[method_idx] in \"PLV\":\n",
     "    cm._set(X = connectivity_analysis(fpp_seizure, phaselock))\n",
@@ -302,7 +415,13 @@
     "    cm._set(X = connectivity_analysis(fpp_seizure, cross_correlation))\n",
     "\n",
     "elif method_code[method_idx] == \"PAC\":\n",
-    "    cm._set(X = connectivity_analysis(fpp_seizure, PAC, True, fpp_seizure[0].shape[1]))"
+    "    cm._set(X = connectivity_analysis(fpp_seizure, PAC, True, fpp_seizure[0].shape[1]))\n",
+    "\n",
+    "plt.figure(figsize=(5,5))\n",
+    "plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
+    "plt.title(\"Connectivity matrix example\")\n",
+    "plt.show()\n",
+    "print(cm.X[-1])"
    ]
   },
   {
@@ -310,12 +429,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Specifying path directories for separating connectivity matrices obtained using different connectivity measures\n",
-    "###### Each leaf directory will contain the connectivity matrices (custom-format PREP files) of all the analyzed subjects/patients.\n",
-    "###### Path to the PREP file will be, e.g., \n",
-    "###### \"*/connectivity_matrices/SUB-preseizure5-CC-(70,180).prep\" if the signal was filtered, and\n",
-    "###### \"*/connectivity_matrices/SUB-preseizure5-PEC.prep\" if the signal was not filtered.\n",
-    "###### (asterix signifies the main directory)"
+    "##### Specifying path directories for separating connectivity matrices obtained using different connectivity measures\n",
+    "##### Each leaf directory will contain the connectivity matrices (custom-format PREP files) of all the analyzed subjects/patients.\n",
+    "##### Path to the PREP file will be, e.g., \n",
+    "##### \"*/connectivity_matrices/SUB-preseizure5-CC-(70,180).prep\" if the signal was filtered, and\n",
+    "##### \"*/connectivity_matrices/SUB-preseizure5-PEC.prep\" if the signal was not filtered.\n",
+    "##### (asterix signifies the main directory)"
    ]
   },
   {
@@ -339,7 +458,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
