--- a/notebooks/find_en.ipynb
+++ b/notebooks/find_en.ipynb
@@ -8,10 +8,11 @@
    "source": [
     "from src.eeg import struct\n",
     "from src.core import REc as rec\n",
-    "from src.game import analyze, evaluate_nodes, check_until\n",
+    "from src.game import classify_epochs, evaluate_nodes, check_until\n",
     "\n",
     "from itertools import combinations\n",
-    "from os import listdir, makedirs"
+    "from os import listdir, makedirs\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -25,10 +26,7 @@
     "# main_folder = \"/content/gdrive/epigame-folder/\"\n",
     "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
     "\n",
-    "path_cm = main_folder + \"connectivity_matrices/\" \n",
-    "\n",
-    "file_baseline = main_folder + \"data/ASJ2016APR14-PAc-baseline.EDF\"\n",
-    "file_seizure = main_folder + \"data/ASJ2016APR14-PAc-seizure.EDF\""
+    "path_cm = main_folder + \"connectivity_matrices/\" "
    ]
   },
   {
@@ -47,7 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### Introducing a limitation to the maximum network size (node number) with the purpose of avoiding seizure-propagating networks. The propagatory networks contain nodes which hypersynchronize secondarily when a seizure starts, but are not part of the epileptogenic network. For generalized seizures, e.g., the classification between baseline and WOI of seizure propagation would be highly accurate for all possible nodes. In this case, the algorithm will keep on adding nodes and the resulting network will ultimately contain all possible nodes. Finding such a network is not useful for improving identificatio nof surgical targets.\n"
+    "##### Introducing a limitation to the maximum network size (node number) with the purpose of avoiding seizure-propagating networks.\n",
+    "##### The propagatory networks contain nodes which hypersynchronize secondarily when a seizure starts, but are not part of the epileptogenic network. For generalized seizures, e.g., the classification between baseline and WOI of seizure propagation would be highly accurate for all possible nodes.\n",
+    "##### In this case, the algorithm will keep on adding nodes and the resulting network will ultimately contain all possible nodes. Finding such a network is not useful for improving identificatio nof surgical targets.\n"
    ]
   },
   {
@@ -76,18 +76,30 @@
    "outputs": [],
    "source": [
     "for file_cm in listdir(path_cm):\n",
-    "\n",
-    "    subject_id = file_cm[0:3]\n",
+    "    print(\"Processing...\")\n",
+    "    subject_id = file_cm.split(\"/\")[-1][0:3]\n",
+    "    print(\"Connectivity matrices of\", file_cm)\n",
     "\n",
     "    cm = rec.load(path_cm + file_cm).data\n",
     "\n",
+    "    print(\"\\nTotal number of epochs =\", len(cm.X))\n",
+    "    print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
+    "\n",
+    "    plt.figure(figsize=(5,5))\n",
+    "    plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
+    "    plt.show()\n",
+    "    print(cm.X[-1])\n",
+    "\n",
     "    nodes = cm.nodes\n",
     "    node_ids = list(range(len(nodes))) \n",
+    "    print(\"Number of nodes =\",len(nodes))\n",
+    "    print(\"\\nNodes:\", nodes)\n",
+    "\n",
     "    node_pairs = combinations(node_ids, 2)\n",
     "\n",
-    "    print(\"Processing node combinations...\")\n",
+    "    print(\"\\nProcessing node combinations...\")\n",
     "\n",
-    "    base = [evaluate_nodes(pair, nodes, analyze(cm, pair)) for pair in node_pairs]\n",
+    "    base = [evaluate_nodes(pair, nodes, classify_epochs(cm, pair)) for pair in node_pairs]\n",
     "\n",
     "    print(f\"{len(base)} finished\")\n",
     "\n",
@@ -112,7 +124,7 @@
     "\n",
     "                    test_group = node_group[0] + (node,)\n",
     "\n",
-    "                    nets.append(evaluate_nodes(test_group, nodes, analyze(cm, test_group)))\n",
+    "                    nets.append(evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group)))\n",
     "\n",
     "                    tests += 1\n",
     "\n",
@@ -144,6 +156,13 @@
     "    file_net = file_cm.split(\".\")[1]\n",
     "    rec(struct(base=base, nets=nets, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -153,7 +172,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
