--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -5,8 +5,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### __Guidelines for using this notebook__\n",
-        "##### The notebook generates connectivity matrices used as input for the analytical framework (*gcolab_find_en.ipynb*).\n",
+        "### __Guidelines for using this notebook__\n",
+        "#### The notebook generates connectivity matrices used as input for the analytical framework (*gcolab_find_en.ipynb*).\n",
         "###### Input for this notebook are two separate EDF files:\n",
         "###### 1) Seizure file - a recording of at least 5 min of pre-seizure time and the whole seizure\n",
         "###### 2) Baseline file - non-seizure recording of 10 min.\n",
@@ -27,7 +27,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### The following five cells define objects for loading and handling the EDF data.  "
+        "#### The following five cells define objects for loading and handling the EDF data.  "
       ]
     },
     {
@@ -588,7 +588,7 @@
       "source": [
         "this = Record\n",
         "\n",
-        "from numpy import array\n",
+        "from numpy import array, average, median, random\n",
         "import scipy.stats as stats\n",
         "\n",
         "class Table(COb, GEq, GRe):\n",
@@ -810,7 +810,7 @@
         "            data = [file.readSignal(eeg.labels[id], epoch.at, epoch.span) for id in eeg.labels]\n",
         "            file.close()\n",
         "        if data is not None:\n",
-        "            eeg._set(data=np.array(data), at_epoch=(n, epoch()))\n",
+        "            eeg._set(data=array(data), at_epoch=(n, epoch()))\n",
         "        else:\n",
         "            if 'at_epoch' in eeg.sets: del(eeg.at_epoch)\n",
         "            eeg._set(data=None)\n",
@@ -923,8 +923,8 @@
         "        gaussian_space = stats.shapiro if len(eeg.deltas)<=5000 else stats.normaltest\n",
         "        def test():\n",
         "            _, p = gaussian_space(eeg.deltas) if len(eeg.deltas)>2 else 0,1\n",
-        "            if p<=0.05: return p, np.median(eeg.deltas)\n",
-        "            return p, np.average(eeg.deltas)    \n",
+        "            if p<=0.05: return p, median(eeg.deltas)\n",
+        "            return p, average(eeg.deltas)    \n",
         "        (p, best), at, check = test(), 0, eeg.epoch.span(eeg.fs)\n",
         "        print('optimizing epoch position...', end=' ')\n",
         "        for _try in range(1, check):\n",
@@ -948,7 +948,7 @@
         "            for n,id in enumerate(proc): key[id].append(n)\n",
         "            map._set(eeg=root, key=key, mask=proc, **opts)\n",
         "        def _at_last(_, sets):\n",
-        "            if 'seed' in sets: np.random.seed(_.seed)\n",
+        "            if 'seed' in sets: random.seed(_.seed)\n",
         "        def set(map, **event_range):\n",
         "            prev, key = map.key, {}\n",
         "            for k,deltas in event_range.items():\n",
@@ -968,7 +968,7 @@
         "            resampled, sequence = [], []\n",
         "            while times:\n",
         "                if len(map.pool[event])==0: map.pool[event] = map.key[event].copy()\n",
-        "                at = map.pool[event].pop(np.random.randint(len(map.pool[event])))\n",
+        "                at = map.pool[event].pop(random.randint(len(map.pool[event])))\n",
         "                map.eeg.epoch[at]\n",
         "                resampled.append(map.eeg.data)\n",
         "                sequence.append(at)\n",
@@ -991,7 +991,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### The cell below defines the preprocessing function for resampling and notch filtering the data. "
+        "#### The cell below defines the preprocessing function for resampling and notch filtering the data. "
       ]
     },
     {
@@ -1024,7 +1024,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### The cell below implements six connectivity measures (seven, considering the double nature of spectral coherence - imaginary part and real part) to be computed between two nodes (signals):\n",
+        "#### The cell below implements six connectivity measures (seven, considering the double nature of spectral coherence - imaginary part and real part) to be computed between two nodes (signals):\n",
         "###### 1) Phase-locking value\n",
         "###### 2) Phase-lag index\n",
         "###### 3) Spectral coherence\n",
@@ -1261,7 +1261,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### The function below computes the connectivity matrix, using one of the connectivity measures."
+        "#### The function below computes the connectivity matrix, using one of the connectivity measures."
       ]
     },
     {
@@ -1303,7 +1303,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### Now that we have defined the objects for loading, handling and processing the data, we proceed with the experiment."
+        "#### Now that we have defined the objects for loading, handling and processing the data, we proceed with the experiment."
       ]
     },
     {
@@ -1311,7 +1311,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### Define the path to your main folder with data in your Google Drive."
+        "#### Define the path to your main folder with data in your Google Drive."
       ]
     },
     {
@@ -1337,7 +1337,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### The user will now be asked to choose from a number of parameters (see *Guidelines*).\n",
+        "#### The user will now be asked to choose from a number of parameters (see *Guidelines*).\n",
         "###### Choose from the available options by typing the number assigned to the option."
       ]
     },
@@ -1383,7 +1383,7 @@
         "id": "BmQOeok9JG_f"
       },
       "source": [
-        "##### The next cell defines the path to the EDF file. \n",
+        "#### The next cell defines the path to the EDF file. \n",
         "###### Filename should be formatted as: patientacronym*-baseline.EDF or patientacronym*-seizure.EDF (asterix signifies a regular expression for any string of choice).\n",
         "###### Subject identifier is saved as a three-letter acronym. "
       ]
@@ -1414,7 +1414,7 @@
         "id": "BxybCmSKJG_h"
       },
       "source": [
-        "##### Connectivity is measured in epochs of data. The cell below loads the EDF files and defines the epochs. \n",
+        "#### Connectivity is measured in epochs of data. The cell below loads the EDF files and defines the epochs. \n",
         "###### *(These epochs will be classified by the support vector machine (a machine-learning classifier) between baseline and a window of interest (WOI) in the gcolab_find_en.ipynb notebook.)*\n",
         "###### The WOI is fragmented into epochs of 1 second (*span*), with half-second overlaps (*step*). \n",
         "###### To keep the dataset balanced for the classification, we considered a fixed number of epochs, irregardless of the WOI duration. This number was fixed to half of the all epochs in a 1-minute window (119), using the pre-set *span* and *step* parameters. \n",
@@ -1446,7 +1446,7 @@
         "id": "2k9zBqXbJG_h"
       },
       "source": [
-        "##### Revise the clinical annotations, double-check if the referent annotations (see *Guidelines*) are there."
+        "#### Revise the clinical annotations, double-check if the referent annotations (see *Guidelines*) are there."
       ]
     },
     {
@@ -1466,12 +1466,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rzcE5bTIJG_i"
       },
       "source": [
-        "##### Check file duration."
+        "#### Check file duration."
       ]
     },
     {
@@ -1497,7 +1498,7 @@
         "id": "5y3gx1LLJG_i"
       },
       "source": [
-        "##### Check node labels.\n",
+        "#### Check node labels.\n",
         "###### The seizure and baseline files should have the equivalent number of nodes. If this is not the case, the code below removes the extra nodes."
       ]
     },
@@ -1547,7 +1548,7 @@
         "id": "rXiZshNnJG_j"
       },
       "source": [
-        "##### Check the sampling frequency. \n",
+        "#### Check the sampling frequency. \n",
         "###### The code below defines the frequency to which data will be resampled to (500 Hz), to homogenize across files."
       ]
     },
@@ -1585,7 +1586,7 @@
         "id": "SnBLQyfNJG_j"
       },
       "source": [
-        "##### The following cell labels the baseline and seizure epochs relative to the position of clinical annotations (see *Guidelines*). \n",
+        "#### The following cell labels the baseline and seizure epochs relative to the position of clinical annotations (see *Guidelines*). \n",
         "###### WOI is always defined relative to the *sz_start_note*.\n",
         "###### Baseline file has arbitrary annotations which serve to split the recording into two halves, for computing the baseline connectivity change (change from the first half to the second half)."
       ]
@@ -1620,7 +1621,7 @@
         "id": "KMPW7uJuJG_j"
       },
       "source": [
-        "##### Next, we optimize the positions of epochs relative to the clinical annotations."
+        "#### Next, we optimize the positions of epochs relative to the clinical annotations."
       ]
     },
     {
@@ -1649,7 +1650,7 @@
         "id": "FSxPBfM2JG_j"
       },
       "source": [
-        "##### The seizure duration is saved in the *units* variable, as the number of epochs present between the clinical annotations of seizure start and end."
+        "#### The seizure duration is saved in the *units* variable, as the number of epochs present between the clinical annotations of seizure start and end."
       ]
     },
     {
@@ -1675,7 +1676,7 @@
         "id": "qHnTnj_PJG_k"
       },
       "source": [
-        "##### Next, we introduce a virtual mask into the *EEG* class object, which indicates the time window to which an epoch belongs to (baseline, WOI or seizure)."
+        "#### Next, we introduce a virtual mask into the *EEG* class object, which indicates the time window to which an epoch belongs to (baseline, WOI or seizure)."
       ]
     },
     {
@@ -1718,7 +1719,7 @@
         "id": "nbtrFb6QJG_k"
       },
       "source": [
-        "##### Fetch the WOI (*a*) and baseline (*b*) epochs, their indices and labels.\n",
+        "#### Fetch the WOI (*a*) and baseline (*b*) epochs, their indices and labels.\n",
         "###### The epoch labels are set as 0 for seizure and 1 for baseline. These labels will be referred to as ground truth by the classifier."
       ]
     },
@@ -1745,9 +1746,8 @@
         "print(\"Epoch shape =\", a[0].shape)\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
-        "from random import randint\n",
         "\n",
-        "j = randint(0, n_epochs)\n",
+        "j = random.randint(0, n_epochs-1)\n",
         "plt.figure(figsize=(3,3))\n",
         "plt.plot(a[j][0])\n",
         "plt.title(\"Epoch example (seizure file)\")\n",
@@ -1765,7 +1765,7 @@
         "id": "WdBYFq7jJG_k"
       },
       "source": [
-        "##### Resample and notch-filter the data."
+        "#### Resample and notch-filter the data."
       ]
     },
     {
@@ -1794,7 +1794,7 @@
         "id": "RfJmXnpVJG_l"
       },
       "source": [
-        "##### Filter the data in the set frequency band, if defined."
+        "#### Filter the data in the set frequency band, if defined."
       ]
     },
     {
@@ -1814,7 +1814,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### Compute the connectivity matrices for all epochs. \n",
+        "#### Compute the connectivity matrices for all epochs. \n",
         "###### The matrices are saved in the *struct* class object, which serves as a table and facilitates accessing the results."
       ]
     },
@@ -1867,7 +1867,7 @@
         "id": "nTFdTGEsJG_l"
       },
       "source": [
-        "##### The connectivity matrices are saved in a subfolder called *connectivity_matrices*, as files with a custom extension (*PREP*). \n",
+        "#### The connectivity matrices are saved in a subfolder called *connectivity_matrices*, as files with a custom extension (*PREP*). \n",
         "###### The filenames indicate the preprocessing parameters, as: \n",
         "###### \"*SUB-preseizure5-CC-(70,180).prep*\" if the signal was filtered, and\n",
         "###### \"*SUB-preseizure5-PEC.prep*\" if the signal was not filtered."
