--- a/notebooks/find_en.ipynb
+++ b/notebooks/find_en.ipynb
@@ -21,9 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/gdrive')\n",
-    "# main_folder = \"/content/gdrive/epigame-folder/\"\n",
     "main_folder = \"/home/kivi/gdrive/epigame-folder/\"\n",
     "\n",
     "path_cm = main_folder + \"connectivity_matrices/\" "
@@ -38,16 +35,6 @@
     "woi = input(\"Time window:\\n 1. Non-seizure (baseline)\\n 2. Pre-seizure (5 min prior to seizure)\\n 3. Pre-seizure (4 min prior to seizure)\\n 4. Pre-seizure (3 min prior to seizure)\\n 5. Pre-seizure (2 min prior to seizure)\\n 6. Pre-seizure (1 min prior to seizure)\\n 7. Transition to seizure (1 min interval)\\n 8. Transition to seizure (2 min interval)\\n 9. Transition to seizure (60% seizure length interval)\\n 10. Seizure\\n Indicate a number: \")\n",
     "\n",
     "woi_code = {'1':\"baseline\", '2':\"preseizure5\", '3':\"preseizure4\", '4':\"preseizure3\", '5':\"preseizure2\", '6':\"preseizure1\", '7':\"transition1\", '8':\"transition2\", '9':\"transition60\", '10':\"seizure\"}"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Introducing a limitation to the maximum network size (node number) with the purpose of avoiding seizure-propagating networks.\n",
-    "##### The propagatory networks contain nodes which hypersynchronize secondarily when a seizure starts, but are not part of the epileptogenic network. For generalized seizures, e.g., the classification between baseline and WOI of seizure propagation would be highly accurate for all possible nodes.\n",
-    "##### In this case, the algorithm will keep on adding nodes and the resulting network will ultimately contain all possible nodes. Finding such a network is not useful for improving identificatio nof surgical targets.\n"
    ]
   },
   {
@@ -99,7 +86,8 @@
     "\n",
     "    print(\"\\nProcessing node combinations...\")\n",
     "\n",
-    "    base = [evaluate_nodes(pair, nodes, classify_epochs(cm, pair)) for pair in node_pairs]\n",
+    "    parallelize = Parallel(n_jobs=-1)(delayed(evaluate_nodes)(pair, nodes, classify_epochs(cm, pair)) for pair in node_pairs)\n",
+    "    base = [p for p in parallelize]\n",
     "\n",
     "    print(f\"{len(base)} finished\")\n",
     "\n",
@@ -156,13 +144,6 @@
     "    file_net = file_cm.split(\".\")[1]\n",
     "    rec(struct(base=base, nets=nets, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
