--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -20,9 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/gdrive')\n",
-    "# main_folder = \"/content/gdrive/epigame-folder/\"\n",
     "main_folder = \"/home/kivi/gdrive/epigame-folder/\""
    ]
   },
@@ -339,7 +336,7 @@
     "import matplotlib.pyplot as plt\n",
     "from random import randint\n",
     "\n",
-    "j = randint(0, n_epochs)\n",
+    "j = randint(0, n_epochs-1)\n",
     "plt.figure(figsize=(3,3))\n",
     "plt.plot(a[0][j])\n",
     "plt.title(\"Epoch example (seizure file)\")\n",
@@ -422,19 +419,6 @@
     "plt.title(\"Connectivity matrix example\")\n",
     "plt.show()\n",
     "print(cm.X[-1])"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Specifying path directories for separating connectivity matrices obtained using different connectivity measures\n",
-    "##### Each leaf directory will contain the connectivity matrices (custom-format PREP files) of all the analyzed subjects/patients.\n",
-    "##### Path to the PREP file will be, e.g., \n",
-    "##### \"*/connectivity_matrices/SUB-preseizure5-CC-(70,180).prep\" if the signal was filtered, and\n",
-    "##### \"*/connectivity_matrices/SUB-preseizure5-PEC.prep\" if the signal was not filtered.\n",
-    "##### (asterix signifies the main directory)"
    ]
   },
   {
